--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@ fbq('track', 'PageView');
       <div class="mx-auto text-center">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
-            <li><form action="https://peer4peer.ca/index.php#home-section" class="pb-2"><button type="submit" class="btn btn-secondary">Home</button></form></li>
-            <li><form action="https://peer4peer.ca/courselanding.php" class="pb-2"><button type="submit" class="btn btn-secondary">Classes</button></form></li>
-            <li><form action="https://peer4peer.ca/tutors.php" class="pb-2"><button type="submit" class="btn btn-secondary">Tutors</button></form></li>
-            <li><form action="https://peer4peer.ca/about.php" class="pb-2"><button type="submit" class="btn btn-secondary">About Us</button></form></li>
+            <li><form action="https://peer4peer.ca/index.html#home-section" class="pb-2"><button type="submit" class="btn btn-secondary">Home</button></form></li>
+            <li><form action="https://peer4peer.ca/courselanding.html" class="pb-2"><button type="submit" class="btn btn-secondary">Classes</button></form></li>
+            <li><form action="https://peer4peer.ca/tutors.html" class="pb-2"><button type="submit" class="btn btn-secondary">Tutors</button></form></li>
+            <li><form action="https://peer4peer.ca/about.html" class="pb-2"><button type="submit" class="btn btn-secondary">About Us</button></form></li>
           </ul>
         </nav>
       </div>
       <div class="ml-auto w-25">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
-            <li class="cta"><form action="https://peer4peer.ca/page-login.php"><button type="submit" class="btn btn-primary"><span>Dashboard</span></button></form></li>
+            <li class="cta"><form action="https://peer4peer.ca/page-login.html"><button type="submit" class="btn btn-primary"><span>Dashboard</span></button></form></li>
 			
           </ul>
         </nav>
@@ -99,7 +99,7 @@ fbq('track', 'PageView');
 .then((value) => {
   switch (value) {
     case "check":
-      window.location="./news.php";
+      window.location="./news.html";
       break;
     default:
       break;
@@ -341,7 +341,7 @@ At its core, Peer4Peer is a platform that connects both student tutors and tutee
           <h4>Subscribe to Our Email List</h4>
         </div>
         <div class="card-body">
-          <form method="POST" id="emaillist" action="https://peer4peer.ca/thank.php">
+          <form method="POST" id="emaillist" action="https://peer4peer.ca/thank.html">
             <div class="form-group">
               <label for="first">First Name *</label>
               <input type="text" class="form-control form-control-sm" name="first" required="">
