--- a/page-login.html
+++ b/page-login.html
@@ -1,80 +1,98 @@
-
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!-->
 
 <html class="no-js" lang="en">
-<!--<![endif]-->
+  <!--<![endif]-->
 
-<!-- Mirrored from peer4peer.ca/page-login.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:45:52 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- Mirrored from peer4peer.ca/page-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:45:52 GMT -->
+  <!-- Added by HTTrack --><meta
+    http-equiv="content-type"
+    content="text/html;charset=UTF-8"
+  /><!-- /Added by HTTrack -->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Peer4Peer Login</title>
-    <meta name="description" content="Sufee Admin - HTML5 Admin Template">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Sufee Admin - HTML5 Admin Template" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="apple-touch-icon" href="apple-icon.html">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="apple-icon.html" />
+    <link rel="shortcut icon" href="favicon.ico" />
 
+    <link
+      rel="stylesheet"
+      href="vendors/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="vendors/font-awesome/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="vendors/themify-icons/css/themify-icons.css" />
+    <link rel="stylesheet" href="vendors/flag-icon-css/css/flag-icon.min.css" />
+    <link rel="stylesheet" href="vendors/selectFX/css/cs-skin-elastic.css" />
 
-    <link rel="stylesheet" href="vendors/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendors/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="vendors/themify-icons/css/themify-icons.css">
-    <link rel="stylesheet" href="vendors/flag-icon-css/css/flag-icon.min.css">
-    <link rel="stylesheet" href="vendors/selectFX/css/cs-skin-elastic.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet" type="text/css">
+  <body class="bg-dark">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-149829084-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-
-
-</head>
-
-<body class="bg-dark">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149829084-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-149829084-1');
-</script>
-
+      gtag("config", "UA-149829084-1");
+    </script>
 
     <div class="sufee-login d-flex align-content-center flex-wrap">
-        <div class="container">
-            <div class="login-content">
-                <div class="login-logo">
-                    <a href="index-2.html">
-                        <img class="align-content" src="images/logo.png" alt="">
-                    </a>
+      <div class="container">
+        <div class="login-content">
+          <div class="login-logo">
+            <a href="index-2.html">
+              <img class="align-content" src="images/logo.png" alt="" />
+            </a>
+          </div>
+          <div class="login-form">
+            <form>
+              <div class="social-button">
+                <div class="text-center">
+                  <a
+                    href="https://accounts.google.com/o/oauth2/auth?response_type=code&amp;access_type=online&amp;client_id=302290533484-rsickauq1kr5vfsj6kecoabk2djjnkju.apps.googleusercontent.com&amp;redirect_uri=https%3A%2F%2Fpeer4peer.ca%2Fpage-login.html&amp;state&amp;scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.profile%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email%20email%20profile%20openid&amp;approval_prompt=auto"
+                    ><img
+                      class="img-fluid"
+                      src="images/btn_google_signin_dark_pressed_web%402x.png"
+                      alt="Google Login"
+                  /></a>
                 </div>
-                <div class="login-form">
-                    <form>
-                                    <div class="social-button">
-                                        <div class="text-center"><a href="https://accounts.google.com/o/oauth2/auth?response_type=code&amp;access_type=online&amp;client_id=302290533484-rsickauq1kr5vfsj6kecoabk2djjnkju.apps.googleusercontent.com&amp;redirect_uri=https%3A%2F%2Fpeer4peer.ca%2Fpage-login.php&amp;state&amp;scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.profile%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email%20email%20profile%20openid&amp;approval_prompt=auto"><img class ="img-fluid" src="images/btn_google_signin_dark_pressed_web%402x.png" alt="Google Login"></a></div>                                    </div>
-                                <div class="register-link m-t-15 text-center">
-                                    <p>Problems Signing in ? <a href="#"> Contact US!</a></p>
-                                </div>
-                    </form>
-                </div>
-            </div>
+              </div>
+              <div class="register-link m-t-15 text-center">
+                <p>Problems Signing in ? <a href="#"> Contact US!</a></p>
+              </div>
+            </form>
+          </div>
         </div>
-	</div>
+      </div>
+    </div>
 
     <script src="vendors/jquery/dist/jquery.min.js"></script>
     <script src="vendors/popper.js/dist/umd/popper.min.js"></script>
     <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
+  </body>
 
-
-</body>
-
-
-<!-- Mirrored from peer4peer.ca/page-login.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:46:06 GMT -->
+  <!-- Mirrored from peer4peer.ca/page-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:46:06 GMT -->
 </html>
