--- a/course8826.html
+++ b/course8826.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from peer4peer.ca/course.php?name=IB%20HL/SL%20Biology by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:56:39 GMT -->
+<!-- Mirrored from peer4peer.ca/course.html?name=IB%20HL/SL%20Biology by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:56:39 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <title>Peer4Peer &mdash; Learning With You!</title>
@@ -77,7 +77,7 @@
           <div class="ml-auto w-25">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
-                <li class="cta"><form action="https://peer4peer.ca/page-login.php"><button type="submit" class="btn btn-primary"><span>My DashBoard</span></button></form></li>
+                <li class="cta"><form action="https://peer4peer.ca/page-login.html"><button type="submit" class="btn btn-primary"><span>My DashBoard</span></button></form></li>
               </ul>
             </nav>
             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a>
@@ -420,5 +420,5 @@
     
   </body>
 
-<!-- Mirrored from peer4peer.ca/course.php?name=IB%20HL/SL%20Biology by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:56:39 GMT -->
+<!-- Mirrored from peer4peer.ca/course.html?name=IB%20HL/SL%20Biology by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:56:39 GMT -->
 </html>
