--- a/courses.html
+++ b/courses.html
@@ -62,25 +62,25 @@ fbq('track', 'PageView');
 <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
   <div class="container-fluid">
     <div class="d-flex align-items-center">
-      <div class="site-logo mr-auto w-25"><a href="index.php"><img src="images/logo1.png" alt="logo" ></a></div>
+      <div class="site-logo mr-auto w-25"><a href="index.html"><img src="images/logo1.png" alt="logo" ></a></div>
       <div class="mx-auto text-center">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
-            <li><form action="./index.php#home-section" class="pb-2"><button type="submit" class="btn btn-secondary">Home</button></form></li>
-            <li><form action="courselanding.php" class="pb-2"><button type="submit" class="btn btn-secondary">Classes</button></form></li>
-            <li><form action="tutors.php" class="pb-2"><button type="submit" class="btn btn-secondary">Tutors</button></form></li>
-            <li><form action="./about.php" class="pb-2"><button type="submit" class="btn btn-secondary">About Us</button></form></li>
+            <li><form action="./index.html#home-section" class="pb-2"><button type="submit" class="btn btn-secondary">Home</button></form></li>
+            <li><form action="courselanding.html" class="pb-2"><button type="submit" class="btn btn-secondary">Classes</button></form></li>
+            <li><form action="tutors.html" class="pb-2"><button type="submit" class="btn btn-secondary">Tutors</button></form></li>
+            <li><form action="./about.html" class="pb-2"><button type="submit" class="btn btn-secondary">About Us</button></form></li>
           </ul>
         </nav>
       </div>
       <div class="ml-auto w-25">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
-            <li class="cta"><form action="page-login.php"><button type="submit" class="btn btn-primary"><span>Dashboard</span></button></form></li>
+            <li class="cta"><form action="page-login.html"><button type="submit" class="btn btn-primary"><span>Dashboard</span></button></form></li>
 			
           </ul>
         </nav>
-        <a href="page-login.php" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a> </div>
+        <a href="page-login.html" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a> </div>
     </div>
   </div>
 </header>
@@ -92,7 +92,7 @@ fbq('track', 'PageView');
             <div class="row justify-content-center align-items-center text-center">
               <div class="col-lg-10"> <br/>
                 <br/>
-                <h1 data-aos='fade-up' data-aos-delay='0'>Workshops</h1></br></br><a href='courses.php?style=D'><h4 data-aos='fade-up' data-aos-delay='0'>Check out Drop-in Sessions</h5></a>              </div>
+                <h1 data-aos='fade-up' data-aos-delay='0'>Workshops</h1></br></br><a href='courses.html?style=D'><h4 data-aos='fade-up' data-aos-delay='0'>Check out Drop-in Sessions</h5></a>              </div>
             </div>
           </div>
         </div>
@@ -187,71 +187,71 @@ fbq('track', 'PageView');
       <div class="m-2 container col"> <br/>
         <div class="row">
           <div class='live Saturday english all m-3 course bg-white align-self-stretch col-lg-3'>
-          <figure class='m-0'> <a href='course.php?name=Public Speaking - Make Your Voice Heard!'><img src='images/uploads/thumbnailPublic Speaking - Make Your Voice Heard!.jpg'alt='Image' class='img-fluid'></a> </figure>
+          <figure class='m-0'> <a href='course.html?name=Public Speaking - Make Your Voice Heard!'><img src='images/uploads/thumbnailPublic Speaking - Make Your Voice Heard!.jpg'alt='Image' class='img-fluid'></a> </figure>
           <div class='course-inner-text py-4 px-4'>
             <div class='meta'><span class='icon-clock-o'></span>Saturdays 13:30~14:00</div>
-            <h3><a href='course.php?name=Public Speaking - Make Your Voice Heard!'>Public Speaking - Make Your Voice Heard!</a></h3>
-            <p>“People will forget what you said, people will f...<br/><a href='course.php?name=Public Speaking - Make Your Voice Heard!'>View More</a></p>
+            <h3><a href='course.html?name=Public Speaking - Make Your Voice Heard!'>Public Speaking - Make Your Voice Heard!</a></h3>
+            <p>“People will forget what you said, people will f...<br/><a href='course.html?name=Public Speaking - Make Your Voice Heard!'>View More</a></p>
           </div>
           <div class='d-flex border-top stats'>
             <div class='py-3 px-4'><span class='icon-users'></span> 14 students</div>
           </div>
         </div> <div class='live Monday tech all m-3 course bg-white align-self-stretch col-lg-3'>
-          <figure class='m-0'> <a href='course.php?name=Introduction to Blockchain'><img src='images/uploads/thumbnailIntroduction to Blockchain.jpg'alt='Image' class='img-fluid'></a> </figure>
+          <figure class='m-0'> <a href='course.html?name=Introduction to Blockchain'><img src='images/uploads/thumbnailIntroduction to Blockchain.jpg'alt='Image' class='img-fluid'></a> </figure>
           <div class='course-inner-text py-4 px-4'>
             <div class='meta'><span class='icon-clock-o'></span>Mondays 11:30~12:00</div>
-            <h3><a href='course.php?name=Introduction to Blockchain'>Introduction to Blockchain</a></h3>
-            <p>Introduction to Emerging Technologies #2: Blockcha...<br/><a href='course.php?name=Introduction to Blockchain'>View More</a></p>
+            <h3><a href='course.html?name=Introduction to Blockchain'>Introduction to Blockchain</a></h3>
+            <p>Introduction to Emerging Technologies #2: Blockcha...<br/><a href='course.html?name=Introduction to Blockchain'>View More</a></p>
           </div>
           <div class='d-flex border-top stats'>
             <div class='py-3 px-4'><span class='icon-users'></span> 3 students</div>
           </div>
         </div> <div class='live Wednesday tech all m-3 course bg-white align-self-stretch col-lg-3'>
-          <figure class='m-0'> <a href='course.php?name=Intro to Brain-Computer Interface'><img src='images/uploads/thumbnailIntro to Brain-Computer Interface.jpg'alt='Image' class='img-fluid'></a> </figure>
+          <figure class='m-0'> <a href='course.html?name=Intro to Brain-Computer Interface'><img src='images/uploads/thumbnailIntro to Brain-Computer Interface.jpg'alt='Image' class='img-fluid'></a> </figure>
           <div class='course-inner-text py-4 px-4'>
             <div class='meta'><span class='icon-clock-o'></span>Wednesdays 11:30~12:00</div>
-            <h3><a href='course.php?name=Intro to Brain-Computer Interface'>Intro to Brain-Computer Interface</a></h3>
-            <p>Introduction to emerging technologies #3: Brain-Co...<br/><a href='course.php?name=Intro to Brain-Computer Interface'>View More</a></p>
+            <h3><a href='course.html?name=Intro to Brain-Computer Interface'>Intro to Brain-Computer Interface</a></h3>
+            <p>Introduction to emerging technologies #3: Brain-Co...<br/><a href='course.html?name=Intro to Brain-Computer Interface'>View More</a></p>
           </div>
           <div class='d-flex border-top stats'>
             <div class='py-3 px-4'><span class='icon-users'></span> 5 students</div>
           </div>
         </div> </div><div class='row classes'><div class='live Saturday tech all m-3 course bg-white align-self-stretch col-lg-3'>
-          <figure class='m-0'> <a href='course.php?name=Intro to Virtual Reality (VR)'><img src='images/uploads/thumbnailIntro to Virtual Reality (VR).jpg'alt='Image' class='img-fluid'></a> </figure>
+          <figure class='m-0'> <a href='course.html?name=Intro to Virtual Reality (VR)'><img src='images/uploads/thumbnailIntro to Virtual Reality (VR).jpg'alt='Image' class='img-fluid'></a> </figure>
           <div class='course-inner-text py-4 px-4'>
             <div class='meta'><span class='icon-clock-o'></span>Saturdays 11:00~11:00</div>
-            <h3><a href='course.php?name=Intro to Virtual Reality (VR)'>Intro to Virtual Reality (VR)</a></h3>
-            <p>Disruptive Technologies. You've heard of them, but...<br/><a href='course.php?name=Intro to Virtual Reality (VR)'>View More</a></p>
+            <h3><a href='course.html?name=Intro to Virtual Reality (VR)'>Intro to Virtual Reality (VR)</a></h3>
+            <p>Disruptive Technologies. You've heard of them, but...<br/><a href='course.html?name=Intro to Virtual Reality (VR)'>View More</a></p>
           </div>
           <div class='d-flex border-top stats'>
             <div class='py-3 px-4'><span class='icon-users'></span> 1 students</div>
           </div>
         </div><div class='live Wednesday english all m-3 course bg-white align-self-stretch col-lg-3'>
-          <figure class='m-0'> <a href='course.php?name=The Art of Essay Writing'><img src='images/uploads/thumbnailThe Art of Essay Writing.jpg'alt='Image' class='img-fluid'></a> </figure>
+          <figure class='m-0'> <a href='course.html?name=The Art of Essay Writing'><img src='images/uploads/thumbnailThe Art of Essay Writing.jpg'alt='Image' class='img-fluid'></a> </figure>
           <div class='course-inner-text py-4 px-4'>
             <div class='meta'><span class='icon-clock-o'></span>Wednesdays 16:00~17:00</div>
-            <h3><a href='course.php?name=The Art of Essay Writing'>The Art of Essay Writing</a></h3>
-            <p>The Art of Essay Writing takes tutees through the ...<br/><a href='course.php?name=The Art of Essay Writing'>View More</a></p>
+            <h3><a href='course.html?name=The Art of Essay Writing'>The Art of Essay Writing</a></h3>
+            <p>The Art of Essay Writing takes tutees through the ...<br/><a href='course.html?name=The Art of Essay Writing'>View More</a></p>
           </div>
           <div class='d-flex border-top stats'>
             <div class='py-3 px-4'><span class='icon-users'></span> 4 students</div>
           </div>
         </div> <div class='live Tuesday science tech all m-3 course bg-white align-self-stretch col-lg-3'>
-          <figure class='m-0'> <a href='course.php?name=Human Longevity: Increasing the human health span'><img src='images/uploads/thumbnailHuman Longevity: Increasing the human health span.jpg'alt='Image' class='img-fluid'></a> </figure>
+          <figure class='m-0'> <a href='course.html?name=Human Longevity: Increasing the human health span'><img src='images/uploads/thumbnailHuman Longevity: Increasing the human health span.jpg'alt='Image' class='img-fluid'></a> </figure>
           <div class='course-inner-text py-4 px-4'>
             <div class='meta'><span class='icon-clock-o'></span>Tuesdays 11:00~11:30</div>
-            <h3><a href='course.php?name=Human Longevity: Increasing the human health span'>Human Longevity: Increasing the human health span</a></h3>
-            <p>Aging is a disease, learn how scientists are curre...<br/><a href='course.php?name=Human Longevity: Increasing the human health span'>View More</a></p>
+            <h3><a href='course.html?name=Human Longevity: Increasing the human health span'>Human Longevity: Increasing the human health span</a></h3>
+            <p>Aging is a disease, learn how scientists are curre...<br/><a href='course.html?name=Human Longevity: Increasing the human health span'>View More</a></p>
           </div>
           <div class='d-flex border-top stats'>
             <div class='py-3 px-4'><span class='icon-users'></span> 2 students</div>
           </div>
         </div> </div><div class='row classes'><div class='live Tuesday music art all m-3 course bg-white align-self-stretch col-lg-3'>
-          <figure class='m-0'> <a href='course.php?name=Music - Music, Theory and History'><img src='images/img_4.jpg'alt='Image' class='img-fluid'></a> </figure>
+          <figure class='m-0'> <a href='course.html?name=Music - Music, Theory and History'><img src='images/img_4.jpg'alt='Image' class='img-fluid'></a> </figure>
           <div class='course-inner-text py-4 px-4'>
             <div class='meta'><span class='icon-clock-o'></span>Tuesdays 12:00~13:00</div>
-            <h3><a href='course.php?name=Music - Music, Theory and History'>Music - Music, Theory and History</a></h3>
-            <p>Learning about music, music theory and music histo...<br/><a href='course.php?name=Music - Music, Theory and History'>View More</a></p>
+            <h3><a href='course.html?name=Music - Music, Theory and History'>Music - Music, Theory and History</a></h3>
+            <p>Learning about music, music theory and music histo...<br/><a href='course.html?name=Music - Music, Theory and History'>View More</a></p>
           </div>
           <div class='d-flex border-top stats'>
             <div class='py-3 px-4'><span class='icon-users'></span> 0 students</div>
@@ -271,11 +271,11 @@ fbq('track', 'PageView');
       <div class="col-md-3 ml-auto">
         <h3>Links</h3>
         <ul class="list-unstyled footer-links">
-          <li><a href="index.php">Home</a></li>
-		<li><a href="news.php">Newsletters</a></li>
-          <li><a href="ToS.php">Terms of Service</a></li>
-          <li><a href="privacy.php">Privacy Policy</a></li>
-          <li><a href="contact.php">Contact US</a></li>
+          <li><a href="index.html">Home</a></li>
+		<li><a href="news.html">Newsletters</a></li>
+          <li><a href="ToS.html">Terms of Service</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="contact.html">Contact US</a></li>
         </ul>
       </div>
     </div>
