--- a/tutors.html
+++ b/tutors.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from peer4peer.ca/tutors.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:46:10 GMT -->
+<!-- Mirrored from peer4peer.ca/tutors.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:46:10 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <title>Peer4Peer &mdash; Learning With You!</title>
@@ -78,17 +78,17 @@ fbq('track', 'PageView');
       <div class="mx-auto text-center">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
-            <li><form action="https://peer4peer.ca/index.php#home-section" class="pb-2"><button type="submit" class="btn btn-secondary">Home</button></form></li>
-            <li><form action="https://peer4peer.ca/courselanding.php" class="pb-2"><button type="submit" class="btn btn-secondary">Classes</button></form></li>
-            <li><form action="https://peer4peer.ca/tutors.php" class="pb-2"><button type="submit" class="btn btn-secondary">Tutors</button></form></li>
-            <li><form action="https://peer4peer.ca/about.php" class="pb-2"><button type="submit" class="btn btn-secondary">About Us</button></form></li>
+            <li><form action="https://peer4peer.ca/index.html#home-section" class="pb-2"><button type="submit" class="btn btn-secondary">Home</button></form></li>
+            <li><form action="https://peer4peer.ca/courselanding.html" class="pb-2"><button type="submit" class="btn btn-secondary">Classes</button></form></li>
+            <li><form action="https://peer4peer.ca/tutors.html" class="pb-2"><button type="submit" class="btn btn-secondary">Tutors</button></form></li>
+            <li><form action="https://peer4peer.ca/about.html" class="pb-2"><button type="submit" class="btn btn-secondary">About Us</button></form></li>
           </ul>
         </nav>
       </div>
       <div class="ml-auto w-25">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
-            <li class="cta"><form action="https://peer4peer.ca/page-login.php"><button type="submit" class="btn btn-primary"><span>Dashboard</span></button></form></li>
+            <li class="cta"><form action="https://peer4peer.ca/page-login.html"><button type="submit" class="btn btn-primary"><span>Dashboard</span></button></form></li>
 			
           </ul>
         </nav>
@@ -463,5 +463,5 @@ Python </span>
     
   </body>
 
-<!-- Mirrored from peer4peer.ca/tutors.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:46:27 GMT -->
+<!-- Mirrored from peer4peer.ca/tutors.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 18:46:27 GMT -->
 </html>
