add images and fixe about page

--- a/about.html
+++ b/about.html
@@ -33,11 +33,68 @@
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
       </div>
-     
+      <div class="site-mobile-menu-body"></div>
     </div>
-<div class="row mb-5 justify-content-center">
-      <div class="col text-center"  data-aos="fade-up" data-aos-delay="">
-        <h2 class="section-title">Who Are We</h2>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149829084-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-149829084-1');
+</script>
+
+<!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window,document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+ fbq('init', '282807862738896'); 
+fbq('track', 'PageView');
+</script>
+<noscript>
+<img height="1" width="1" src="https://www.facebook.com/tr?id=282807862738896&ev=PageView&noscript=1"/>
+</noscript>
+<!-- End Facebook Pixel Code -->
+<!-- End Facebook Pixel Code -->
+
+
+<header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
+  <div class="container-fluid">
+    <div class="d-flex align-items-center">
+      <div class="site-logo mr-auto w-25"><a href="index.php"><img src="images/logo1.png" alt="logo" ></a></div>
+      <div class="mx-auto text-center">
+        <nav class="site-navigation position-relative text-right" role="navigation">
+          <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
+            <li><form action="./index.php#home-section" class="pb-2"><button type="submit" class="btn btn-secondary">Home</button></form></li>
+            <li><form action="courselanding.php" class="pb-2"><button type="submit" class="btn btn-secondary">Classes</button></form></li>
+            <li><form action="tutors.php" class="pb-2"><button type="submit" class="btn btn-secondary">Tutors</button></form></li>
+            <li><form action="./about.php" class="pb-2"><button type="submit" class="btn btn-secondary">About Us</button></form></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="ml-auto w-25">
+        <nav class="site-navigation position-relative text-right" role="navigation">
+          <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
+            <li class="cta"><form action="page-login.php"><button type="submit" class="btn btn-primary"><span>Dashboard</span></button></form></li>
+			
+          </ul>
+        </nav>
+        <a href="page-login.php" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a> </div>
+    </div>
+  </div>
+</header>
+
+ 
+<div class="mt-5 site-section container">
+<div class="row mt-5 mb-5 justify-content-center">
+      <div class="mt-5 col text-center"  data-aos="fade-up" data-aos-delay="">
+        <h2 class="mt-5 section-title">Who Are We</h2>
         <p class="mb-5">Presently, the P4P team consists of five high school students from Upper Canada College in Toronto, Canada. While we may be young, we each share a passion and spirit for entrepreneurship and charitable initiatives to support those around us. Despite being confined to our homes, we recognize that tough times never last, but tough people do. We are excited to start this journey together. </p>
       </div>
     </div>
@@ -90,8 +147,40 @@
         </div>
       </div>
 </div>
+	
+	
+	  </div>
+<footer class="footer-section bg-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>About Peer4Peer</h3>
+        <p>Peer4Peer is a peer tutoring platform that optimizes student engagement with virtual learning and promotes virtual companionship during a time of uncertainty. </p>
+      </div>
+      <div class="col-md-3 ml-auto">
+        <h3>Links</h3>
+        <ul class="list-unstyled footer-links">
+          <li><a href="index.php">Home</a></li>
+		<li><a href="news.php">Newsletters</a></li>
+          <li><a href="ToS.php">Terms of Service</a></li>
+          <li><a href="privacy.php">Privacy Policy</a></li>
+          <li><a href="contact.php">Contact US</a></li>
+        </ul>
+      </div>
     </div>
-
+    <div class="row pt-5 mt-5 text-center">
+      <div class="col-md-12">
+        <div class="border-top pt-5">
+          <p> 
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> 
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> 
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 		<!-- .site-wrap -->
 
   <script src="js/jquery-3.3.1.min.js"></script>
