--- a/about.html
+++ b/about.html
@@ -67,25 +67,25 @@ fbq('track', 'PageView');
 <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
   <div class="container-fluid">
     <div class="d-flex align-items-center">
-      <div class="site-logo mr-auto w-25"><a href="index.php"><img src="images/logo1.png" alt="logo" ></a></div>
+      <div class="site-logo mr-auto w-25"><a href="index.html"><img src="images/logo1.png" alt="logo" ></a></div>
       <div class="mx-auto text-center">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
-            <li><form action="./index.php#home-section" class="pb-2"><button type="submit" class="btn btn-secondary">Home</button></form></li>
-            <li><form action="courselanding.php" class="pb-2"><button type="submit" class="btn btn-secondary">Classes</button></form></li>
-            <li><form action="tutors.php" class="pb-2"><button type="submit" class="btn btn-secondary">Tutors</button></form></li>
-            <li><form action="./about.php" class="pb-2"><button type="submit" class="btn btn-secondary">About Us</button></form></li>
+            <li><form action="./index.html#home-section" class="pb-2"><button type="submit" class="btn btn-secondary">Home</button></form></li>
+            <li><form action="courselanding.html" class="pb-2"><button type="submit" class="btn btn-secondary">Classes</button></form></li>
+            <li><form action="tutors.html" class="pb-2"><button type="submit" class="btn btn-secondary">Tutors</button></form></li>
+            <li><form action="./about.html" class="pb-2"><button type="submit" class="btn btn-secondary">About Us</button></form></li>
           </ul>
         </nav>
       </div>
       <div class="ml-auto w-25">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
-            <li class="cta"><form action="page-login.php"><button type="submit" class="btn btn-primary"><span>Dashboard</span></button></form></li>
+            <li class="cta"><form action="page-login.html"><button type="submit" class="btn btn-primary"><span>Dashboard</span></button></form></li>
 			
           </ul>
         </nav>
-        <a href="page-login.php" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a> </div>
+        <a href="page-login.html" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a> </div>
     </div>
   </div>
 </header>
@@ -160,11 +160,11 @@ fbq('track', 'PageView');
       <div class="col-md-3 ml-auto">
         <h3>Links</h3>
         <ul class="list-unstyled footer-links">
-          <li><a href="index.php">Home</a></li>
-		<li><a href="news.php">Newsletters</a></li>
-          <li><a href="ToS.php">Terms of Service</a></li>
-          <li><a href="privacy.php">Privacy Policy</a></li>
-          <li><a href="contact.php">Contact US</a></li>
+          <li><a href="index.html">Home</a></li>
+		<li><a href="news.html">Newsletters</a></li>
+          <li><a href="ToS.html">Terms of Service</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="contact.html">Contact US</a></li>
         </ul>
       </div>
     </div>
